--- a/src/html/filters-and-content.html
+++ b/src/html/filters-and-content.html
@@ -2,7 +2,7 @@
     <div id="content-filters">
         <div class="filters">
             <label for="input">Search</label>
-            <input type="text" class="filter-input" id="input">
+            <input type="text" class="filter-input" id="input" />
             <label for="select-time">Time</label>
             <select class="time" id="select-time"></select>
             <label for="select-area">Area</label>
@@ -13,8 +13,7 @@
         <div class="reset-filters"></div>
     </div>
     <div id="content-data">
-        <div class="cards">
-        </div>
+        <div class="cards"></div>
         <div class="pagination"></div>
     </div>
 </section>
