--- a/src/html/header.html
+++ b/src/html/header.html
@@ -3,14 +3,25 @@
     <div class="block-for-mobile container">
         <nav class="nav">
             <div class="logo-block">
-                <a class="logo-first-color" href="/src/index.html">tasty<span
-                        class="logo-second-color">treats.</span></a>
+                <a class="logo-first-color" href="/src/index.html"
+                    >tasty<span class="logo-second-color">treats.</span></a
+                >
             </div>
             <div class="cart-menu-block">
-                <svg id="header-cart-icon" class="header-cart-icon icon" width="24" height="24">
+                <svg
+                    id="header-cart-icon"
+                    class="header-cart-icon icon"
+                    width="24"
+                    height="24"
+                >
                     <use href="/src/img/sprite.svg#icon-shopping-cart"></use>
                 </svg>
-                <svg class="header-hamburger-icon icon" id="hamburger" width="32" height="32">
+                <svg
+                    class="header-hamburger-icon icon"
+                    id="hamburger"
+                    width="32"
+                    height="32"
+                >
                     <use href="/src/img/sprite.svg#icon-hamburger"></use>
                 </svg>
             </div>
@@ -22,61 +33,157 @@
     <div class="tablet-desktop container">
         <nav class="tablet-desktop-nav">
             <div class="navigations">
-                <a id="home-link" class="tablet-menu-nav-links" href="/src/index.html">Home</a>
-                <a id="favorites-link" class="tablet-menu-nav-links" href="/src/favorites.html">Favorites</a>
+                <a
+                    id="home-link"
+                    class="tablet-menu-nav-links"
+                    href="/src/index.html"
+                    >Home</a
+                >
+                <a
+                    id="favorites-link"
+                    class="tablet-menu-nav-links"
+                    href="/src/favorites.html"
+                    >Favorites</a
+                >
             </div>
 
             <div class="logo-block">
-                <a class="logo-first-color" href="/src/index.html">tasty<span
-                        class="logo-second-color">treats.</span></a>
+                <a class="logo-first-color" href="/src/index.html"
+                    >tasty<span class="logo-second-color">treats.</span></a
+                >
             </div>
 
             <div class="tablet-desktop-nav-icons">
-                <svg id="cart-icon-desktop" class="header-cart-icon icon" width="24" height="24">
+                <svg
+                    id="cart-icon-desktop"
+                    class="header-cart-icon icon"
+                    width="24"
+                    height="24"
+                >
                     <use href="/src/img/sprite.svg#icon-shopping-cart"></use>
                 </svg>
 
-                <svg class="switcher" id="desktop-switch" width="76" viewBox="0 0 76 44" fill="none"
-                    xmlns="http://www.w3.org/2000/svg">
+                <svg
+                    class="switcher"
+                    id="desktop-switch"
+                    width="76"
+                    viewBox="0 0 76 44"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                >
                     <defs>
-                        <linearGradient id="paint0_linear_desktop" x1="-2.2" y1="23" x2="62.8" y2="23.4"
-                            gradientUnits="userSpaceOnUse">
+                        <linearGradient
+                            id="paint0_linear_desktop"
+                            x1="-2.2"
+                            y1="23"
+                            x2="62.8"
+                            y2="23.4"
+                            gradientUnits="userSpaceOnUse"
+                        >
                             <stop offset="0" stop-color="#9BB537" />
-                            <stop offset="1" stop-color="#9BB537" stop-opacity="0.69" />
+                            <stop
+                                offset="1"
+                                stop-color="#9BB537"
+                                stop-opacity="0.69"
+                            />
                         </linearGradient>
 
-                        <filter id="filterOffDesktop" x="3" y="1" width="76" height="50" filterUnits="userSpaceOnUse"
-                            color-interpolation-filters="sRGB">
-                            <feFlood flood-opacity="0" result="BackgroundImageFix" />
-                            <feColorMatrix in="SourceAlpha" type="matrix"
-                                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha" />
+                        <filter
+                            id="filterOffDesktop"
+                            x="3"
+                            y="1"
+                            width="76"
+                            height="50"
+                            filterUnits="userSpaceOnUse"
+                            color-interpolation-filters="sRGB"
+                        >
+                            <feFlood
+                                flood-opacity="0"
+                                result="BackgroundImageFix"
+                            />
+                            <feColorMatrix
+                                in="SourceAlpha"
+                                type="matrix"
+                                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
+                                result="hardAlpha"
+                            />
                             <feOffset dx="7" dy="5" />
                             <feGaussianBlur stdDeviation="7.5" />
-                            <feColorMatrix type="matrix"
-                                values="0 0 0 0 0.627451 0 0 0 0 0.619608 0 0 0 0 0.627451 0 0 0 0.4 0" />
-                            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow" />
-                            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape" />
+                            <feColorMatrix
+                                type="matrix"
+                                values="0 0 0 0 0.627451 0 0 0 0 0.619608 0 0 0 0 0.627451 0 0 0 0.4 0"
+                            />
+                            <feBlend
+                                mode="normal"
+                                in2="BackgroundImageFix"
+                                result="effect1_dropShadow"
+                            />
+                            <feBlend
+                                mode="normal"
+                                in="SourceGraphic"
+                                in2="effect1_dropShadow"
+                                result="shape"
+                            />
                         </filter>
 
-                        <filter id="filterOnDesktop" x="0" y="1" width="76" height="50" filterUnits="userSpaceOnUse"
-                            color-interpolation-filters="sRGB">
-                            <feFlood flood-opacity="0" result="BackgroundImageFix" />
-                            <feColorMatrix in="SourceAlpha" type="matrix"
-                                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha" />
+                        <filter
+                            id="filterOnDesktop"
+                            x="0"
+                            y="1"
+                            width="76"
+                            height="50"
+                            filterUnits="userSpaceOnUse"
+                            color-interpolation-filters="sRGB"
+                        >
+                            <feFlood
+                                flood-opacity="0"
+                                result="BackgroundImageFix"
+                            />
+                            <feColorMatrix
+                                in="SourceAlpha"
+                                type="matrix"
+                                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
+                                result="hardAlpha"
+                            />
                             <feOffset dx="7" dy="5" />
                             <feGaussianBlur stdDeviation="7.5" />
-                            <feColorMatrix type="matrix"
-                                values="0 0 0 0 0.0862745 0 0 0 0 0.0862745 0 0 0 0 0.0862745 0 0 0 0.6 0" />
-                            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow" />
-                            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape" />
+                            <feColorMatrix
+                                type="matrix"
+                                values="0 0 0 0 0.0862745 0 0 0 0 0.0862745 0 0 0 0 0.0862745 0 0 0 0.6 0"
+                            />
+                            <feBlend
+                                mode="normal"
+                                in2="BackgroundImageFix"
+                                result="effect1_dropShadow"
+                            />
+                            <feBlend
+                                mode="normal"
+                                in="SourceGraphic"
+                                in2="effect1_dropShadow"
+                                result="shape"
+                            />
                         </filter>
                     </defs>
 
                     <g filter="url(#filterOffDesktop)">
-                        <rect id="switch-rect-desktop" x="8" y="11" width="46" height="20" rx="10" fill="#CECDCD" />
+                        <rect
+                            id="switch-rect-desktop"
+                            x="8"
+                            y="11"
+                            width="46"
+                            height="20"
+                            rx="10"
+                            fill="#CECDCD"
+                        />
                     </g>
 
-                    <circle id="switch-circle-desktop" cx="18" cy="21" r="9.4" fill="#F8F8F8" />
+                    <circle
+                        id="switch-circle-desktop"
+                        cx="18"
+                        cy="21"
+                        r="9.4"
+                        fill="#F8F8F8"
+                    />
                 </svg>
             </div>
         </nav>
@@ -90,52 +197,133 @@
     </svg>
 
     <div class="mobile-menu-nav">
-        <a id="mobile-home-link" class="mobile-menu-nav-links" href="/src/index.html">Home</a>
-        <a id="mobile-favorites-link" class="mobile-menu-nav-links" href="/src/favorites.html">Favorites</a>
+        <a
+            id="mobile-home-link"
+            class="mobile-menu-nav-links"
+            href="/src/index.html"
+            >Home</a
+        >
+        <a
+            id="mobile-favorites-link"
+            class="mobile-menu-nav-links"
+            href="/src/favorites.html"
+            >Favorites</a
+        >
     </div>
 
     <div class="mobile-menu-switcher">
-        <svg class="switcher" id="mobile-switch" width="76" height="51" viewBox="0 0 76 51" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
+        <svg
+            class="switcher"
+            id="mobile-switch"
+            width="76"
+            height="51"
+            viewBox="0 0 76 51"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+        >
             <defs>
-                <linearGradient id="paint0_linear_mobile" x1="-2.2" y1="23" x2="62.8" y2="23.4"
-                    gradientUnits="userSpaceOnUse">
+                <linearGradient
+                    id="paint0_linear_mobile"
+                    x1="-2.2"
+                    y1="23"
+                    x2="62.8"
+                    y2="23.4"
+                    gradientUnits="userSpaceOnUse"
+                >
                     <stop offset="0" stop-color="#9BB537" />
                     <stop offset="1" stop-color="#9BB537" stop-opacity="0.69" />
                 </linearGradient>
 
-                <filter id="filterOffMobile" x="3" y="1" width="76" height="50" filterUnits="userSpaceOnUse"
-                    color-interpolation-filters="sRGB">
+                <filter
+                    id="filterOffMobile"
+                    x="3"
+                    y="1"
+                    width="76"
+                    height="50"
+                    filterUnits="userSpaceOnUse"
+                    color-interpolation-filters="sRGB"
+                >
                     <feFlood flood-opacity="0" result="BackgroundImageFix" />
-                    <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
-                        result="hardAlpha" />
+                    <feColorMatrix
+                        in="SourceAlpha"
+                        type="matrix"
+                        values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
+                        result="hardAlpha"
+                    />
                     <feOffset dx="7" dy="5" />
                     <feGaussianBlur stdDeviation="7.5" />
-                    <feColorMatrix type="matrix"
-                        values="0 0 0 0 0.627451 0 0 0 0 0.619608 0 0 0 0 0.627451 0 0 0 0.4 0" />
-                    <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow" />
-                    <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape" />
+                    <feColorMatrix
+                        type="matrix"
+                        values="0 0 0 0 0.627451 0 0 0 0 0.619608 0 0 0 0 0.627451 0 0 0 0.4 0"
+                    />
+                    <feBlend
+                        mode="normal"
+                        in2="BackgroundImageFix"
+                        result="effect1_dropShadow"
+                    />
+                    <feBlend
+                        mode="normal"
+                        in="SourceGraphic"
+                        in2="effect1_dropShadow"
+                        result="shape"
+                    />
                 </filter>
 
-                <filter id="filterOnMobile" x="0" y="1" width="76" height="50" filterUnits="userSpaceOnUse"
-                    color-interpolation-filters="sRGB">
+                <filter
+                    id="filterOnMobile"
+                    x="0"
+                    y="1"
+                    width="76"
+                    height="50"
+                    filterUnits="userSpaceOnUse"
+                    color-interpolation-filters="sRGB"
+                >
                     <feFlood flood-opacity="0" result="BackgroundImageFix" />
-                    <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
-                        result="hardAlpha" />
+                    <feColorMatrix
+                        in="SourceAlpha"
+                        type="matrix"
+                        values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
+                        result="hardAlpha"
+                    />
                     <feOffset dx="7" dy="5" />
                     <feGaussianBlur stdDeviation="7.5" />
-                    <feColorMatrix type="matrix"
-                        values="0 0 0 0 0.0862745 0 0 0 0 0.0862745 0 0 0 0 0.0862745 0 0 0 0.6 0" />
-                    <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow" />
-                    <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow" result="shape" />
+                    <feColorMatrix
+                        type="matrix"
+                        values="0 0 0 0 0.0862745 0 0 0 0 0.0862745 0 0 0 0 0.0862745 0 0 0 0.6 0"
+                    />
+                    <feBlend
+                        mode="normal"
+                        in2="BackgroundImageFix"
+                        result="effect1_dropShadow"
+                    />
+                    <feBlend
+                        mode="normal"
+                        in="SourceGraphic"
+                        in2="effect1_dropShadow"
+                        result="shape"
+                    />
                 </filter>
             </defs>
 
             <g filter="url(#filterOffMobile)">
-                <rect id="switch-rect-mobile" x="8" y="11" width="46" height="20" rx="10" fill="#CECDCD" />
+                <rect
+                    id="switch-rect-mobile"
+                    x="8"
+                    y="11"
+                    width="46"
+                    height="20"
+                    rx="10"
+                    fill="#CECDCD"
+                />
             </g>
 
-            <circle id="switch-circle-mobile" cx="18" cy="21" r="9.4" fill="#F8F8F8" />
+            <circle
+                id="switch-circle-mobile"
+                cx="18"
+                cy="21"
+                r="9.4"
+                fill="#F8F8F8"
+            />
         </svg>
     </div>
 </div>
