--- a/src/html/hero.html
+++ b/src/html/hero.html
@@ -1,25 +1,31 @@
 <section id="hero-section">
-  <div class="hero-container">
-    <div class="hero-block">
-      <div class="hero-text">
-        <h1 class="hero-title">
-          Learn to Cook
-          <span class="hero-span">Tasty Treats'</span> Customizable Masterclass
-        </h1>
-        <p class="hero-descr">
-          TastyTreats - Customize Your Meal with Ingredient Options and
-          Step-by-Step Video Guides.
-        </p>
-      </div>
-      <a href="tel:+380730000000" class="hero-btn" data-modal-open type="button">
-        Order now
-      </a>
+    <div class="hero-container">
+        <div class="hero-block">
+            <div class="hero-text">
+                <h1 class="hero-title">
+                    Learn to Cook
+                    <span class="hero-span">Tasty Treats'</span> Customizable
+                    Masterclass
+                </h1>
+                <p class="hero-descr">
+                    TastyTreats - Customize Your Meal with Ingredient Options
+                    and Step-by-Step Video Guides.
+                </p>
+            </div>
+            <a
+                href="tel:+380730000000"
+                class="hero-btn"
+                data-modal-open
+                type="button"
+            >
+                Order now
+            </a>
+        </div>
+        <div class="swiper-container">
+            <div class="swiper">
+                <div class="images swiper-wrapper"></div>
+                <div class="swiper-pagination"></div>
+            </div>
+        </div>
     </div>
-    <div class="swiper-container">
-      <div class="swiper">
-        <div class="images swiper-wrapper"></div>
-        <div class="swiper-pagination"></div>
-      </div>
-    </div>
-  </div>
 </section>
