--- a/src/html/modal-give-rating.html
+++ b/src/html/modal-give-rating.html
@@ -1,29 +1,30 @@
 <div class="backdrop is-hidden" data-modal-rating>
     <div class="modal-rating">
-      <button type="button" class="rating-close-btn" data-modal-rating-close>
-        <svg class="icon-close" width="20" height="20">
-          <use href="/src/img/modal-recipe/modal-recipe.svg#icon-close"></use>
-        </svg>
-      </button>
-      <p class="rating-title">Rating</p>
-      <div class="rating" id="rating-container">
-        <span class="rating-number-def">0.0</span>
-        <span class="star" data-rating="1">&#9733;</span>
-        <span class="star" data-rating="2">&#9733;</span>
-        <span class="star" data-rating="3">&#9733;</span>
-        <span class="star" data-rating="4">&#9733;</span>
-        <span class="star" data-rating="5">&#9733;</span>
-      </div>
-      <form class="modal-form-rating">
-        <input
-          type="email"
-          name="user-email"
-          class="rating-input"
-          id="user-email"
-          placeholder="Enter email"
-        />
-        <button type="submit" class="modal-rating-btn">Send</button>
-      </form>
+        <button type="button" class="rating-close-btn" data-modal-rating-close>
+            <svg class="icon-close" width="20" height="20">
+                <use
+                    href="/src/img/modal-recipe/modal-recipe.svg#icon-close"
+                ></use>
+            </svg>
+        </button>
+        <p class="rating-title">Rating</p>
+        <div class="rating" id="rating-container">
+            <span class="rating-number-def">0.0</span>
+            <span class="star" data-rating="1">&#9733;</span>
+            <span class="star" data-rating="2">&#9733;</span>
+            <span class="star" data-rating="3">&#9733;</span>
+            <span class="star" data-rating="4">&#9733;</span>
+            <span class="star" data-rating="5">&#9733;</span>
+        </div>
+        <form class="modal-form-rating">
+            <input
+                type="email"
+                name="user-email"
+                class="rating-input"
+                id="user-email"
+                placeholder="Enter email"
+            />
+            <button type="submit" class="modal-rating-btn">Send</button>
+        </form>
     </div>
-  </div>
-</html>
+</div>
