--- a/src/html/popular.html
+++ b/src/html/popular.html
@@ -3,9 +3,7 @@
     <div class="populars">
         <h2 class="popular-recepies-title">Popular recipes</h2>
         <div class="main-popular-recepies">
-            <ul class="js-popular-recepies list">
-
-            </ul>
+            <ul class="js-popular-recepies list"></ul>
         </div>
     </div>
 </div>
