--- a/src/html/filters-and-content.html
+++ b/src/html/filters-and-content.html
@@ -1,19 +1,27 @@
-<section id="content">
-    <div id="content-filters">
-        <div class="filters">
-            <label for="input">Search</label>
-            <input type="text" class="filter-input" id="input" />
-            <label for="select-time">Time</label>
-            <select class="time" id="select-time"></select>
-            <label for="select-area">Area</label>
-            <select class="area" id="select-area"></select>
-            <label for="select-ingredients">Ingredients</label>
-            <select class="ingrediends" id="select-ingredients"></select>
+<div id="content-filters">
+    <div class="filters">
+        <div class="filter-area search-box">
+            <label class="label" for="input">Search</label>
+            <input type="text" class="filter-input filter-item" id="input">
         </div>
-        <div class="reset-filters"></div>
+        <div class="filter-area time-box">
+            <label class="label" for="select-time">Time</label>
+            <select class="time filter-item" id="select-time"></select>
+        </div>
+        <div class="filter-area area-box">
+            <label class="label" for="select-area">Area</label>
+            <select class="area filter-item" id="select-area"></select>
+        </div>
+        <div class="filter-area ingrediends-box">
+            <label class="label" for="select-ingredients">Ingredients</label>
+            <select class="ingrediends filter-item" id="select-ingredients"></select>
+        </div>
     </div>
-    <div id="content-data">
-        <div class="cards"></div>
-        <div class="pagination"></div>
+</div>
+<div class="reset-filters"></div>
+</div>
+<div id="content-data">
+    <div class="cards">
+        <ul class="list-item"></ul>
     </div>
 </section>
