adding files to index html
adding files to index html

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
@@ -23,6 +23,9 @@
                     <include src="./html/popular.html"></include>
                 </section>
                 <include src="./html/filters-and-content.html"></include>
+                <include src="./html/modal-order-now.html"></include>
+                <include src="./html/modal-recipe.html"></include>
+                <include src="./html/modal-give-rating.html"></include>
             </div>
         </main>
 
